# weahtr

./: .gitignore  Dockerfile  Dockerfile_kraken  LICENSE  README.md  environment.yml  environment_kraken.yml  pyproject.toml
analysis/: header_processing.py  test_generator.py  test_grid_removal.py  test_processing_workflow.py  test_table_method.py  test_transforms.py  train_number_model.py  train_yolo.py
demo/: README.md
demo/ReData/: format_redata.json  format_redata.yml  format_redata_config.yml  format_redata_full.json  format_redata_workflow.py
demo/format_1/: format_1.yml  format_1_month.json  format_1_workflow.py
demo/format_1/images/: image.txt
demo/format_6/: format_6.yml  format_6_full.json  format_6_workflow.py
demo/random/: image_transformation.py
demo/test_scripts/: image_transformation.py  transcription_test.py
demo_input/: format_1_table_guides.txt  format_config.yml
demo_input/ReData/: format_redata_config.yml
demo_input/format_1/: format_1.yml  format_1_full.json  format_1_outline.json  format_1_outline.yml  format_1_small.json  format_1_testing.yml
demo_input/format_6/: format_6.yml
models/tesseract/: cc-base.traineddata
src/weahtr/: __init__.py  dataloader.py  generator.py  header_processing.py  inference_trocr.py  label_cells.py  model.py  old.py  template.py  test.py  test_transforms.py  train_trocr.py  train_yolo.py  transform.py  utils.py  weahtr.py  weahtr_cli.py
